Import of ANTRO/PDF-1.0_1 from CPAN.
gitpan-cpan-distribution: PDF
gitpan-cpan-version:      1.0_1
gitpan-cpan-path:         ANTRO/PDF-1.0_1.tar.gz
gitpan-cpan-author:       ANTRO
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Proposed Module List Entry:
 
-PDF        adpO  Generate reports from various logfiles
+PDF        adpO  Access information in a PDF file
 
 The PDF library is a proposed library for access the information 
 contained inside a PDF file. It is at its early development stage and
