--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-New Release: 1.08
+New Release: 1.09
 
 Name           DSLI  Description                                  Info
 -----------    ----  -------------------------------------------- -----
@@ -17,7 +17,7 @@ Install "as usual" with:
 Then, you can try the scripts in the example directory that tests 
 if a file is a PDF ( not looking at the .pdf extension :-), the PDF 
 version used to write them, their number of pages and the various 
-Info ( Author, Creation date, etc. ).
+Info ( Author, Creation date, Crypting, etc. ).
 
 PREREQUISITES:
 
@@ -25,10 +25,11 @@ A Perl distribution :-)
 
 NEWS:
 
-Added support for the iso latin1 chars in the Getinfo ( Thanks to Thomas Drillich for the patch )
+Added support for crypted PDF. The library can now check 
+if the parsed PDF has some kind of crypting.
 
-For the people that have trouble with the "standard" install procedure under wintel platform, 
-now is available a quick and dirty install.bat in the main directory 
+I've also tested the library with the new PDF version ( 1.3 ) 
+and it works correctly.
 
 AVAILABILITY:
 
